// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputEmailRebuilt renders a basic InputEmailRebuilt 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <input
              class="input"
              data-testid="ATL-InputEmail-input"
              id="«r0»"
              name="generatedName--«r0»"
              type="email"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputEmailRebuilt renders correctly as large 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper large"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <input
              class="input"
              data-testid="ATL-InputEmail-input"
              id="«r3»"
              name="generatedName--«r3»"
              type="email"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputEmailRebuilt renders correctly as small 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper small"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <input
              class="input"
              data-testid="ATL-InputEmail-input"
              id="«r2»"
              name="generatedName--«r2»"
              type="email"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputEmailRebuilt renders correctly when disabled 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper disabled"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <input
              class="input"
              data-testid="ATL-InputEmail-input"
              disabled=""
              id="«r4»"
              name="generatedName--«r4»"
              type="email"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputEmailRebuilt renders correctly when invalid 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper invalid"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <input
              aria-invalid="true"
              class="input"
              data-testid="ATL-InputEmail-input"
              id="«r0»"
              name="generatedName--«r0»"
              type="email"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InputEmailRebuilt renders correctly with placeholder 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="wrapper miniLabel"
      data-testid="Form-Field-Wrapper"
    >
      <div
        class="horizontalWrapper"
      >
        <div
          class="inputWrapper"
        >
          <label
            class="label"
            for="«r1»"
          >
            Enter email
          </label>
          <div
            class="childrenWrapper"
            tabindex="-1"
          >
            <input
              class="input"
              data-testid="ATL-InputEmail-input"
              id="«r1»"
              name="generatedName--«r1»"
              type="email"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
